Add attachDotnetDebugger debug option
Extract processId Fetch

Cleanup legacy bad rebase

Revert breakout config

Add dotnetDebuggerConfigName info

TODO the workspace folder support

Fix typo

Cleanup flow and breakout temporary console to dedicated functions

Add handlers to cleanup dotnet attach

Fix linting issues

Refactor one-time event disposal using variable scope demonry

Clarify the handlers

Remove Disposable (lint fix)

Add initial test

Lint fix

Fix description to use correct and more specific terminology.

Co-authored-by: Andy Jordan <2226434+andschwa@users.noreply.github.com>

Apply suggestions from @andschwa review

Fixed E2E Debug Testing

Remove Only

Add initial Debug test scaffolding

Remove "only"

Move validation logic to resolve functions and implement first resolve test

Rearrange methods with public first and implementation details last, in order of implemented interfaces. Add more tests

Fixed positioning of resolvesubstitutedvariables, now the public methods happen in the order they are called

Populate more tests

Some more scaffoldng and a broken test

Add optional attach port to runTests and remove only *again*

Fix wrong argv for port

Add check for PSES Binaries

Adjust StubInterface to use Partial to preserve intellisense

More test fixes

Fix test names to be consistent with other tests

More specific error checks and implement structuredClone

Add structuredclone to dev dependencies

Revert accidental commit of new build tasks

Update package.json

Co-authored-by: Andy Jordan <2226434+andschwa@users.noreply.github.com>

Enable ESModuleInterop and fix related issues

Updated structuredclone import to ES6 syntax

Add ESModuleInterop to tsconfig.json

More test adds and add newlines between Arrange Act Assert

More test scaffolding

ESModuleInterop fixes

Bump package-lock

More esModuleInterop fixes

Tests TESTS TESTS TESTS TESTS

Flaky Test Check

Move testing default folder to examples

Add binary module example and C# extension f

--- a/examples/.vscode/settings.json
+++ b/examples/.vscode/settings.json
@@ -2,5 +2,9 @@
     // Use a custom PowerShell Script Analyzer settings file for this workspace.
     // Relative paths for this setting are always relative to the workspace root dir.
     "powershell.scriptAnalysis.settingsPath": "./PSScriptAnalyzerSettings.psd1",
-    "files.defaultLanguage": "powershell"
+    "files.defaultLanguage": "powershell",
+    // Suppresses some first-run messages
+    "git.openRepositoryInParentFolders": "never",
+    "csharp.suppressDotnetRestoreNotification": true,
+    "extensions.ignoreRecommendations": true
 }
