--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "@vscode/test-electron": "~2.2.1",
+    "@vscode/vsce": "~2.16.0",
     "esbuild": "^0.16.13",
     "eslint": "^8.31.0",
     "eslint-plugin-header": "^3.1.1",
@@ -104,8 +105,7 @@
     "mock-fs": "~5.2.0",
     "rewire": "~6.0.0",
     "sinon": "~15.0.1",
-    "typescript": "~4.9.4",
-    "vsce": "~2.15.0"
+    "typescript": "~4.9.4"
   },
   "extensionDependencies": [
     "vscode.powershell"
