--- a/package.json
+++ b/package.json
@@ -74,38 +74,38 @@
     "onWalkthrough:PowerShell"
   ],
   "dependencies": {
-    "@vscode/extension-telemetry": "^0.6.2",
-    "node-fetch": "~2.6.9",
-    "semver": "~7.3.8",
-    "uuid": "~9.0.0",
-    "vscode-languageclient": "~8.0.2",
-    "vscode-languageserver-protocol": "~3.17.2"
+    "@vscode/extension-telemetry": "0.6.2",
+    "node-fetch": "2.6.9",
+    "semver": "7.3.8",
+    "uuid": "9.0.0",
+    "vscode-languageclient": "8.0.2",
+    "vscode-languageserver-protocol": "3.17.2"
   },
   "devDependencies": {
-    "@types/glob": "~8.0.1",
-    "@types/mocha": "~10.0.1",
-    "@types/mock-fs": "~4.13.1",
-    "@types/node": "~14.17.4",
-    "@types/node-fetch": "~2.6.2",
-    "@types/rewire": "~2.5.28",
-    "@types/semver": "~7.3.13",
-    "@types/sinon": "~10.0.13",
-    "@types/uuid": "~9.0.0",
-    "@types/vscode": "~1.65.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "@vscode/test-electron": "~2.2.3",
-    "@vscode/vsce": "~2.17.0",
-    "esbuild": "^0.17.8",
-    "eslint": "^8.34.0",
-    "eslint-plugin-header": "^3.1.1",
-    "glob": "^8.1.0",
-    "mocha": "~10.2.0",
-    "mocha-multi-reporters": "~1.5.1",
-    "mock-fs": "~5.2.0",
-    "rewire": "~6.0.0",
-    "sinon": "~15.0.1",
-    "typescript": "~4.9.5"
+    "@types/glob": "8.0.1",
+    "@types/mocha": "10.0.1",
+    "@types/mock-fs": "4.13.1",
+    "@types/node": "14.17.4",
+    "@types/node-fetch": "2.6.2",
+    "@types/rewire": "2.5.28",
+    "@types/semver": "7.3.13",
+    "@types/sinon": "10.0.13",
+    "@types/uuid": "9.0.0",
+    "@types/vscode": "1.65.0",
+    "@typescript-eslint/eslint-plugin": "5.52.0",
+    "@typescript-eslint/parser": "5.52.0",
+    "@vscode/test-electron": "2.2.3",
+    "@vscode/vsce": "2.17.0",
+    "esbuild": "0.17.8",
+    "eslint": "8.34.0",
+    "eslint-plugin-header": "3.1.1",
+    "glob": "8.1.0",
+    "mocha": "10.2.0",
+    "mocha-multi-reporters": "1.5.1",
+    "mock-fs": "5.2.0",
+    "rewire": "6.0.0",
+    "sinon": "15.0.1",
+    "typescript": "4.9.5"
   },
   "extensionDependencies": [
     "vscode.powershell"
