--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -16,6 +16,7 @@ body:
 - type: textarea
   attributes:
     label: Summary
+    id: summary
     description: Explain the problem briefly below.
     placeholder: I am experiencing a problem with X. I think Y should be happening but Z is actually happening.
   validations:
@@ -23,6 +24,7 @@ body:
 - type: textarea
   attributes:
     label: PowerShell Version
+    id: powershell-version
     description: Paste verbatim output from `$PSVersionTable` below. Please double-check that this is the PowerShell version that VS Code is set to use.
     render: console
     placeholder: |
@@ -44,6 +46,7 @@ body:
 - type: textarea
   attributes:
     label: Visual Studio Code Version
+    id: vscode-version
     description: Paste verbatim output from `code --version` below.
     render: console
     placeholder: |
@@ -57,6 +60,7 @@ body:
 - type: textarea
   attributes:
     label: Extension Version
+    id: extension-version
     description: Paste verbatim output from `code --list-extensions --show-versions | Select-String powershell` below.
     render: console
     placeholder: |
@@ -68,14 +72,17 @@ body:
 - type: textarea
   attributes:
     label: Steps to Reproduce
+    id: steps-to-reproduce
     description: List of steps, sample code, failing test or link to a project that reproduces the behavior. Make sure you place a stack trace inside a code (```) block to avoid linking unrelated issues.
   validations:
     required: true
 - type: textarea
   attributes:
     label: Visuals
+    id: visuals
     description: Please upload images or animations that can be used to reproduce issues in the area below. Try the [Steps Recorder](https://support.microsoft.com/en-us/windows/record-steps-to-reproduce-a-problem-46582a9b-620f-2e36-00c9-04e25d784e47) on Windows or [Screenshot](https://support.apple.com/en-us/HT208721) on macOS.
 - type: textarea
   attributes:
     label: Logs
+    id: logs
     description: Please upload logs collected by following these [instructions](https://github.com/PowerShell/vscode-powershell/blob/main/docs/troubleshooting.md#logs) in the area below. Be careful to scrub sensitive information!
