--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "powershell-preview",
-  "displayName": "PowerShell Preview",
+  "name": "powershell",
+  "displayName": "PowerShell",
   "version": "2023.3.0",
   "preview": true,
   "publisher": "ms-vscode",
-  "description": "(Preview) Develop PowerShell modules, commands and scripts in Visual Studio Code!",
+  "description": "Develop PowerShell modules, commands and scripts in Visual Studio Code!",
   "engines": {
     "vscode": "^1.67.0"
   },
