--- a/.vsts-ci/templates/publish-github.yml
+++ b/.vsts-ci/templates/publish-github.yml
@@ -6,6 +6,7 @@ steps:
   displayName: Download signed artifacts
 
 - pwsh: |
+    $PackageJson = Get-Content -Raw $(Build.SourcesDirectory)/package.json | ConvertFrom-Json
     $(Build.SourcesDirectory)/tools/setupReleaseTools.ps1 -Token $(GitHubToken)
-    New-DraftRelease -RepositoryName vscode-powershell -Assets $(Pipeline.Workspace)/vscode-powershell/powershell-*.vsix,$(Pipeline.Workspace)/vscode-powershell/Install-VSCode.ps1
+    New-DraftRelease -RepositoryName vscode-powershell -Assets $(Pipeline.Workspace)/vscode-powershell/powershell-$($PackageJson.version).vsix,$(Pipeline.Workspace)/vscode-powershell/Install-VSCode.ps1
   displayName: Drafting a GitHub Release
