Remove `preview` label from marketplace
We were using this as an easy way to determine if the version is a pre-release.
However, the marketplace always looks a the latest version meaning it was
placing a "preview" label and our preview icon on the webpage.

So we had to write a different way to determine if the extension is a pre-release.

--- a/.vsts-ci/templates/publish-markets.yml
+++ b/.vsts-ci/templates/publish-markets.yml
@@ -7,11 +7,13 @@ steps:
 
 - pwsh: |
     npm ci --loglevel=error
-    $PackageJson = Get-Content -Raw $(Build.SourcesDirectory)/package.json | ConvertFrom-Json
+    Import-Module $(Build.SourcesDirectory)/tools/ReleaseTools.psm1
+    $Version = Get-Version -RepositoryName vscode-powershell
+    $PackageVersion = Get-MajorMinorPatch -Version $Version
     $PublishArgs = @(
-      if ($PackageJson.preview) { '--pre-release' }
+      if (Test-IsPreRelease) { '--pre-release' }
       '--packagePath'
-      "$(Pipeline.Workspace)/vscode-powershell/powershell-$($PackageJson.version).vsix"
+      "$(Pipeline.Workspace)/vscode-powershell/powershell-$PackageVersion.vsix"
       '--pat'
       '$(VsceToken)'
     )
