--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,9 @@
       "error",
       "always"
     ],
+    "@typescript-eslint/explicit-function-return-type": [
+      "error"
+    ],
     "@typescript-eslint/no-floating-promises": [
       "error",
       {
