--- a/package.json
+++ b/package.json
@@ -90,12 +90,12 @@
     "@types/rewire": "2.5.28",
     "@types/semver": "7.3.13",
     "@types/sinon": "10.0.13",
-    "@types/ungap__structured-clone": "^0.3.0",
+    "@types/ungap__structured-clone": "0.3.0",
     "@types/uuid": "9.0.1",
     "@types/vscode": "1.67.0",
     "@typescript-eslint/eslint-plugin": "5.57.0",
     "@typescript-eslint/parser": "5.57.1",
-    "@ungap/structured-clone": "^1.0.2",
+    "@ungap/structured-clone": "1.0.2",
     "@vscode/test-electron": "2.3.0",
     "@vscode/vsce": "2.18.0",
     "esbuild": "0.17.15",
