--- a/test/mocks/BinaryModule/BinaryModule.csproj
+++ b/test/mocks/BinaryModule/BinaryModule.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-preview-06">
+        <PackageReference Include="PowerShellStandard.Library" Version="5.1.1">
         <PrivateAssets>All</PrivateAssets>
         </PackageReference>
     </ItemGroup>
