--- a/package.json
+++ b/package.json
@@ -103,10 +103,12 @@
     "eslint-plugin-header": "3.1.1",
     "glob": "8.1.0",
     "mocha": "10.2.0",
+    "mocha-explorer-launcher-scripts": "0.4.0",
     "mocha-multi-reporters": "1.5.1",
     "mock-fs": "5.2.0",
     "rewire": "6.0.0",
     "sinon": "15.0.3",
+    "source-map-support": "0.5.21",
     "typescript": "5.0.4"
   },
   "extensionDependencies": [
