--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "vscode-languageserver-protocol": "3.17.3"
   },
   "devDependencies": {
-    "@types/glob": "8.0.1",
     "@types/mocha": "10.0.1",
     "@types/mock-fs": "4.13.1",
     "@types/node": "16.18.12",
@@ -101,12 +100,14 @@
     "esbuild": "0.17.16",
     "eslint": "8.38.0",
     "eslint-plugin-header": "3.1.1",
-    "glob": "8.1.0",
+    "glob": "9.3.4",
     "mocha": "10.2.0",
+    "mocha-explorer-launcher-scripts": "0.4.0",
     "mocha-multi-reporters": "1.5.1",
     "mock-fs": "5.2.0",
     "rewire": "6.0.0",
     "sinon": "15.0.3",
+    "source-map-support": "0.5.21",
     "typescript": "5.0.4"
   },
   "extensionDependencies": [
