--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -61,9 +61,7 @@ steps:
   inputs:
     targetType: inline
     script: |
-      Install-Module InvokeBuild -Scope CurrentUser -Force -PassThru
-      Install-Module platyPS -Scope CurrentUser -Force -Verbose -Passthru
-      Invoke-Build -Configuration Release Package
+      Invoke-Build -InstallPrerequisites -Configuration Release Package
       $PackageJson = Get-Content -Raw package.json | ConvertFrom-Json
       Write-Host "##vso[task.setvariable variable=vsixPath]$(Resolve-Path powershell-$($PackageJson.version).vsix)"
     workingDirectory: $(Build.SourcesDirectory)/vscode-powershell
@@ -81,11 +79,7 @@ steps:
   inputs:
     targetType: inline
     script: |
-      $PSVersionTable
-      Get-ChildItem env:
-      Get-Module -ListAvailable Pester
-      Install-Module InvokeBuild -Scope CurrentUser -Force
-      Invoke-Build -Configuration Release Test
+      Invoke-Build -InstallPrerequisites -Configuration Release Test
     workingDirectory: $(Build.SourcesDirectory)/vscode-powershell
     pwsh: ${{ parameters.pwsh }}
   env:
