Suppress dotnet popup

--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -4,6 +4,9 @@ variables:
   # Don't download unneeded packages
   - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
     value: 'true'
+  - name: DOTNET_NOLOGO
+    value: 'true'
+
   # Improve performance by not sending telemetry
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 'true'
