Add `startLocation` setting for Extension Terminal
Can be set to either `Panel` (the default) or `Editor` which opens like
a tab (in another "editor" view of VS Code).

--- a/package.json
+++ b/package.json
@@ -886,6 +886,19 @@
           "default": false,
           "markdownDescription": "Starts the Extension Terminal in the background. **If this is enabled, to access the terminal you must run the [Show Extension Terminal command](command:PowerShell.ShowSessionConsole), and once shown it cannot be put back into the background.** This option completely hides the Extension Terminal from the terminals view. You are probably looking for the `#powershell.integratedConsole.showOnStartup#` option instead."
         },
+        "powershell.integratedConsole.startLocation": {
+          "type": "string",
+          "default": "Panel",
+          "enum": [
+            "Editor",
+            "Panel"
+          ],
+          "markdownEnumDescriptions": [
+            "Creates the Extension Terminal in Editor area",
+            "Creates the Extension Terminal in Panel area"
+          ],
+          "markdownDescription": "Sets the startup location for Extension Terminal."
+        },
         "powershell.integratedConsole.focusConsoleOnExecute": {
           "type": "boolean",
           "default": true,
