--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -8,6 +8,8 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
     paths-ignore: [ '**/*.md' ]
+  merge_group:
+    types: [ checks_requested ]
   schedule:
     - cron: '00 14 * * *' # Every morning at 7:00am PDT
 
