Setup GitHub merge queue (#4637)

--- a/.vsts-ci/azure-pipelines-ci.yml
+++ b/.vsts-ci/azure-pipelines-ci.yml
@@ -1,7 +1,7 @@
 name: CI-$(Build.SourceBranchName)-$(Date:yyyyMMdd)$(Rev:.rr)
 
 trigger:
-  - main
+  - gh-readonly-queue/main/*
 pr:
   paths:
     exclude:
