Group ESLint Dependabot updates
Using Dependabot's new grouped updates feature.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,9 @@ updates:
   directory: "/"
   schedule:
     interval: weekly
+  groups:
+    ESLint:
+      patterns:
+        - esbuild
+        - eslint
+        - "@typescript-eslint/*"
