Updated ESLint rules configuration and run `--fix`
Per https://typescript-eslint.io/blog/announcing-typescript-eslint-v6/

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,8 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:@typescript-eslint/strict"
+    "plugin:@typescript-eslint/stylistic-type-checked",
+    "plugin:@typescript-eslint/strict-type-checked"
   ],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
@@ -15,9 +14,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module",
     "tsconfigRootDir": ".",
-    "project": [
-      "./tsconfig.json"
-    ]
+    "project": true
   },
   "plugins": [
     "@typescript-eslint",
