Move eslint dependabot group to npm

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,13 +5,13 @@ updates:
   schedule:
     interval: weekly
   open-pull-requests-limit: 10
+  groups:
+    ESLint:
+      patterns:
+        - "esbuild"
+        - "eslint"
+        - "@typescript-eslint/*"
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: weekly
-  groups:
-    ESLint:
-      patterns:
-        - esbuild
-        - eslint
-        - "@typescript-eslint/*"
