Enhance `additionalPowerShellExes` setting
Now the warning that's emitted when an additional PowerShell executable
isn't found can be suppressed with a setting. If the setting's value has
single or double quotes, it handles it. If the executable name wasn't
appended, it handles it. Smarter!

--- a/package.json
+++ b/package.json
@@ -669,6 +669,11 @@
           "markdownDescription": "**Deprecated:** Specifies whether you should be prompted to update your version of `PackageManagement` if it's under 1.4.6.",
           "markdownDeprecationMessage": "**Deprecated:** This prompt has been removed as it's no longer strictly necessary to upgrade the `PackageManagement` module."
         },
+        "powershell.suppressAdditionalExeNotFoundWarning": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "Suppresses the warning message when any of `#powershell.powerShellAdditionalExePaths#` is not found."
+        },
         "powershell.startAsLoginShell.osx": {
           "type": "boolean",
           "default": true,
