Use untildify for ~ in `cwd` and `additionalPowerShellExes`
This makes them way less annoying. I'm ok taking a dependency on
untildify as it's a very simple package, and the Python extension for VS
Code also uses it. However, it must remain at v4.0.0, as the latest
version, v5.0.0, is pure ESM and therefore cannot be loaded by VS Code.

https://github.com/sindresorhus/untildify/releases/tag/v5.0.0

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@vscode/extension-telemetry": "0.8.2",
     "node-fetch": "2.6.12",
     "semver": "7.5.4",
+    "untildify": "4.0.0",
     "uuid": "9.0.0",
     "vscode-languageclient": "8.1.0",
     "vscode-languageserver-protocol": "3.17.3"
