--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,9 @@ updates:
         - "esbuild"
         - "eslint"
         - "@typescript-eslint/*"
+  ignore:
+    - dependency-name: "untildify"
+      versions: ["5.x"]
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
