Move `--sourcemap` to scripts instead of `Invoke-Build`
So that they're generated even when using `build-watch`. Double-checked
that they're not included in the package (even though they're now
generated for release configuration too).

--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
   "main": "./out/main.js",
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "build": "esbuild ./src/main.ts --outdir=out --bundle --external:vscode --platform=node",
+    "build": "esbuild ./src/main.ts --outdir=out --sourcemap --bundle --external:vscode --platform=node",
     "build-watch": "npm run build -- --watch",
     "build-test": "tsc --incremental",
     "build-test-watch": "npm run build-test -- --watch",
