--- a/.github/workflows/close-stale-issues.yml
+++ b/.github/workflows/close-stale-issues.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '0 * * * *' # Every hour on the hour
+    - cron: "*/15 * * * *"
 
 jobs:
   stale-resolved-issues:
