Add "Needs: Triage" label to issues opened through forms
We used to have Fabric Bot add these labels, but it's gone now.

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,6 +1,6 @@
 name: 🐛 Bug report
 description: Open an issue about a bug that needs fixing.
-labels: Issue-Bug
+labels: ["Issue-Bug", "Needs: Triage"]
 body:
 - type: checkboxes
   attributes:
