--- a/.github/workflows/close-stale-issues.yml
+++ b/.github/workflows/close-stale-issues.yml
@@ -14,11 +14,11 @@ jobs:
       - uses: actions/stale@v8
         name: Close issues labeled as resolved after 1 day of inactivity
         with:
-          any-of-labels: "Resolution-Answered,Resolution-Duplicate,Resolution-External, Resolution-Fixed,Resolution-Inactive"
+          any-of-labels: "Resolution-Answered,Resolution-Duplicate,Resolution-External,Resolution-Fixed,Resolution-Inactive"
           days-before-stale: 1
           days-before-close: 0
           close-issue-reason: completed
-          close-issue-message: "This issue has been marked as resolved and has not had any activity for **1 day**. It has been closed for housekeeping purposes."
+          close-issue-message: "This issue has been labeled as resolved and has not had any activity for one or more days. It has been closed for housekeeping purposes."
   stale-feedback-issues:
     runs-on: ubuntu-latest
     steps:
@@ -32,4 +32,4 @@ jobs:
           labels-to-add-when-unstale: "Needs: Maintainer Attention"
           labels-to-remove-when-unstale: "Needs: Author Feedback,Needs: Fix Verification,Needs: Repro Info"
           close-issue-reason: completed
-          close-issue-message: "This issue has been marked as needing feedback and has not had any activity for **1 week**. It has been closed for housekeeping purposes."
+          close-issue-message: "This issue has been labeled as needing feedback and has not had any activity for one or more weeks. It has been closed for housekeeping purposes."
