--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,11 +7,14 @@ updates:
     interval: weekly
   open-pull-requests-limit: 10
   groups:
-    ESLint:
+    eslint:
       patterns:
         - "esbuild"
         - "eslint"
         - "@typescript-eslint/*"
+    types:
+      patterns:
+        - "@types/*"
   ignore:
     - dependency-name: "untildify"
       versions: ["5.x"]
