Group NPM `@types` updates
Since they're non-breaking, developer-only.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,7 @@ updates:
         - "esbuild"
         - "eslint"
         - "@typescript-eslint/*"
+        - "@types/*"
   ignore:
     - dependency-name: "untildify"
       versions: ["5.x"]
