--- a/.github/workflows/close-stale-issues.yml
+++ b/.github/workflows/close-stale-issues.yml
@@ -12,24 +12,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/stale@v8
-        name: Close issues labeled as resolved after 1 day of inactivity
+        name: Close issues labeled as resolved after 1 week of inactivity
         with:
           any-of-labels: "Resolution-Answered,Resolution-Duplicate,Resolution-External,Resolution-Fixed,Resolution-Inactive"
-          days-before-stale: 1
-          days-before-close: 0
+          stale-issue-label: "Needs: Fix Verification"
+          days-before-stale: 0
+          days-before-close: 7
+          labels-to-remove-when-stale: "Needs: Maintainer Attention,Needs: Triage"
+          labels-to-add-when-unstale: "Needs: Maintainer Attention"
+          exempt-issue-labels: "Needs: Maintainer Attention"
           close-issue-reason: completed
-          close-issue-message: "This issue has been labeled as resolved and has not had any activity for one or more days. It has been closed for housekeeping purposes."
+          close-issue-message: "This issue has been labeled as resolved and has not had any activity a week. It has been closed for housekeeping purposes."
   stale-feedback-issues:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/stale@v8
         name: Close issues labeled as needs feedback after 1 week of inactivity
         with:
-          any-of-labels: "Needs: Author Feedback,Needs: Fix Verification,Needs: Repro Info"
-          days-before-stale: 7
-          days-before-close: 0
-          labels-to-remove-when-stale: "Needs: Maintainer Attention"
+          stale-issue-label: "Needs: Author Feedback"
+          days-before-stale: -1
+          days-before-close: 7
+          labels-to-remove-when-stale: "Needs: Maintainer Attention,Needs: Triage"
           labels-to-add-when-unstale: "Needs: Maintainer Attention"
-          labels-to-remove-when-unstale: "Needs: Author Feedback,Needs: Fix Verification,Needs: Repro Info"
           close-issue-reason: completed
-          close-issue-message: "This issue has been labeled as needing feedback and has not had any activity for one or more weeks. It has been closed for housekeeping purposes."
+          close-issue-message: "This issue has been labeled as needing feedback and has not had any activity a week. It has been closed for housekeeping purposes."
