Test GitHub Actions for CI

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,4 +1,4 @@
-name: Run CodeQL Analysis
+name: CodeQL Analysis
 
 on:
   push:
@@ -15,23 +15,20 @@ on:
 
 jobs:
   analyze:
-    name: Analyze
+    name: analyze
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ typescript ]
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
       security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'typescript' ]
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
@@ -42,3 +39,5 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+      with:
+        category: '/language:${{matrix.language}}'
