--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           cache: true
           cache-dependency-path: 'PowerShellEditorServices/**/packages.lock.json'
+          global-json-file: PowerShellEditorServices/global.json
 
       - name: Install PSResources
         shell: pwsh
