--- a/examples/.vscode/settings.json
+++ b/examples/.vscode/settings.json
@@ -3,4 +3,7 @@
     // Relative paths for this setting are always relative to the workspace root dir.
     "powershell.scriptAnalysis.settingsPath": "./PSScriptAnalyzerSettings.psd1",
     "files.defaultLanguage": "powershell",
+    "git.openRepositoryInParentFolders": "never",
+    "csharp.suppressDotnetRestoreNotification": true,
+    "extensions.ignoreRecommendations": true
 }
