--- a/package.json
+++ b/package.json
@@ -118,11 +118,11 @@
   ],
   "main": "./out/main.js",
   "scripts": {
-    "esbuild-base": "esbuild --bundle --platform=node --target=node18.15 --format=cjs --sourcemap --external:mocha --external:vscode --external:eslint",
+    "esbuild-base": "esbuild --platform=node --target=node18.15 --format=cjs --sourcemap",
     "lint": "eslint . --ext .ts",
-    "build": "npm run esbuild-base -- src/main.ts --outdir=out",
+    "build": "npm run esbuild-base -- --bundle src/main.ts --outdir=out --external:mocha --external:vscode --external:eslint",
     "build-watch": "npm run build -- --watch",
-    "build-test": "npm run esbuild-base -- test/**/*.test.ts --outdir=out/test --sources-content=false",
+    "build-test": "tsc --incremental",
     "build-test-watch": "npm run build-test -- --watch",
     "test": "npm run build-test && vscode-test",
     "package": "vsce package --no-gitHubIssueLinking",
