Enable LanguageClient Tracing Option
Co-authored-by: Andy Jordan <2226434+andyleejordan@users.noreply.github.com>

📄 Update Docs and instructions

Remove note about it being an unsupported option

--- a/package.json
+++ b/package.json
@@ -1006,6 +1006,16 @@
           "type": "boolean",
           "default": false,
           "markdownDescription": "Show buttons in the editor's title bar for moving the terminals pane (with the PowerShell Extension Terminal) around."
+        },
+        "powershell.trace.server": {
+          "type": "string",
+          "enum": [
+            "off",
+            "messages",
+            "verbose"
+          ],
+          "default": "off",
+          "description": "Traces the communication between VS Code and the PowerShell Editor Services language server. **This setting is only meant for extension developers!**"
         }
       }
     },
